--- a/designer/html_tab.ui
+++ b/designer/html_tab.ui
@@ -164,6 +164,13 @@
       </widget>
      </item>
      <item>
+      <widget class="QCheckBox" name="minifyHtml">
+       <property name="text">
+        <string>Minify HTML (asynchronous insertion)</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
